Bug fix for release 17.1 (#3100)
* Fix for "Console log when scroll to end of log misses the bottom padding which make the texts overlap with the footer" #3062

* Fix for missing icons

* Header alignment

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -2814,7 +2814,7 @@ pre, code, #admin-holder-for-admin-config-source-xml textarea {
 .buildoutput_pre {
   width:      100%;
   box-sizing: border-box;
-  padding:    10px;
+  padding:    10px 10px 40px 10px;
   min-height: calc(100vh - 480px);
 }
 
@@ -3093,10 +3093,6 @@ a.add_item {
     color:      $disabled-icon-color;
     background: none;
   }
-}
-
-.action_icon {
-  height: auto;
 }
 
 .move_icon {
